# fast_zer0

./: pyproject.toml
fast_zer0/: app.py
migrations/: env.py
migrations/versions/: 28e3dc907b72_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
